--- a/second.html
+++ b/second.html
@@ -144,20 +144,23 @@
                 <div class="m-sidemenu">
                     <div class="sidebox blue">
                         <ul>
-                            <li><a href="#">金蝶EAS</a></li>
-                            <li><a href="#">金蝶EAS</a></li>
-                            <li><a href="#">金蝶EAS</a></li>
-                            <li><a href="#">金蝶EAS</a></li>
-                            <li><a href="#">金蝶EAS</a></li>
-                            <li><a href="#">金蝶EAS</a></li>
-                            <li><a href="#">金蝶EAS</a></li>
+                            <li class="toplv"><a href="#">关于我们</a></li>
+                            <li class="toplv toplv-x">
+                                <div class="sublv">
+                                    <a href="#">解决方案1</a>
+                                    <a href="#">解决方案1</a>
+                                    <a href="#">解决方案1</a>
+                                    <a href="#">解决方案1</a>
+                                </div>
+                            </li>
                         </ul>
                     </div>
                     
                     <div class="sidebox grey">
                         <h4>联系蝶舞</h4>
-                        <ul>
-                            
+                        <ul class="contant">
+                            <li><span class="t"></span>0571-87758515</li>
+                            <li><span class="m"></span>hzdwrj@deefly.cn</li>
                         </ul>
                     </div>
                 </div>
