--- a/about-1.html
+++ b/about-1.html
@@ -144,16 +144,10 @@
                 <div class="m-sidemenu">
                     <div class="sidebox blue">
                         <ul>
-                            <li class="toplv"><a class="crt" href="#">关于我们</a></li>
-                            <li class="toplv toplv-x">
-                                <a class="cd" href="javascript:;">日化行业</a>
-                                <div class="sublv">
-                                    <a href="#">解决方案1</a>
-                                    <a href="#">解决方案1</a>
-                                    <a href="#">解决方案1</a>
-                                    <a href="#">解决方案1</a>
-                                </div>
-                            </li>
+                            <li class="toplv"><a class="crt" href="#">公司简介</a></li>
+                            <li class="toplv"><a class="" href="#">公司文化</a></li>
+                            <li class="toplv"><a class="" href="#">联系蝶舞</a></li>
+                            <li class="toplv"><a class="" href="#">人才招聘</a></li>
                         </ul>
                     </div>
                     
@@ -167,7 +161,15 @@
                 </div>
 
                 <div class="m-mb">
-                    <div></div>
+                    <div class="m-picture"><img src="pictures/company.jpg"></div>
+                    <div class="m-article">
+                        <h2>公司简介</h2>
+                        <p>杭州蝶舞软件有限公司，金蝶白金合作伙伴,金蝶杭州地区顶级实施服务伙伴，杭州地区最大的金蝶授权代理，定位于为包括制造、餐饮、服装、房地产、金融、医药、食品、政务等各行业提供专业的管理咨询和信息化服务，并成为长期合作伙伴，同客户一起成长，成为行业翘楚。</p>
+                        <p>公司以“优化管理，引领成功”为使命，以“构建发展平台，成就员工和客户”为宗旨，在“大家族”的工作氛围中团结协作，精诚为客户提供专业服务。通过公司和员工的共同努力，目前，已为几百家企业提供了全方位的信息化管理服务，帮助众多大中小型企业提高了产品质量和生产效益，优化了内部人事管理与财务管理等，提高了企业的盈利能力，增强了企业竞争力，得到了客户的信任和好评。</p>
+                        <p>杭州蝶舞拥有一支朝气蓬勃、资历丰富的管理和技术团队，包括企业管理咨询顾问、资深项目经理、实施顾问等专业技术人才，我公司主要实施顾问与项目经理均拥有多年金蝶及管理软件行业从业经验，在软件项目实施领域有深入研究和总结，业已为浙江春风动力股份有限公司、三鼎控股集团、爱德公司、顾家家居股份有限公司、杭州巨星科技股份有限公司、嘉力丰集团、湖州巨人机电有限公司和杭州东风船舶制造有限公司等企业提供了专业咨询和实施服务。</p>
+                        <p>金蝶国际软件集团(以下简称“金蝶”)是香港联交所主板上市公司（股票代码：0268），是亚太及中国领先的企业管理软件及互联网服务领导者，全球领先的中间件软件、在线管理及全程电子商务服务商。金蝶以“成就员工梦想，帮助顾客成功，让中国管理模式在全球崛起”为使命，以快速响应客户需求、为客户提供全生命周期的服务作为不断前进的动力，已为世界范围内超过100万家企业和政府组织成功提供了管理咨询和信息化服务。金蝶连续8年被IDC评为中国中小企业市场占有率第一名、连续5年被《福布斯亚洲》评为亚洲最佳中小企业，2010年金蝶继Capgemini、HP、IBM、SAP、Sun等国际知名厂商后成为TOGAF企业架构标准制定权威组织The Open Group第6家董事会成员。</p>
+
+                    </div>
                 </div>
             </div>
         </div>
