--- a/aboutM.html
+++ b/aboutM.html
@@ -144,16 +144,10 @@
                 <div class="m-sidemenu">
                     <div class="sidebox blue">
                         <ul>
-                            <li class="toplv"><a class="crt" href="#">关于我们</a></li>
-                            <li class="toplv toplv-x">
-                                <a class="cd" href="javascript:;">日化行业</a>
-                                <div class="sublv">
-                                    <a href="#">解决方案1</a>
-                                    <a href="#">解决方案1</a>
-                                    <a href="#">解决方案1</a>
-                                    <a href="#">解决方案1</a>
-                                </div>
-                            </li>
+                            <li class="toplv"><a class="crt" href="#">公司简介</a></li>
+                            <li class="toplv"><a class="" href="#">公司文化</a></li>
+                            <li class="toplv"><a class="" href="#">联系蝶舞</a></li>
+                            <li class="toplv"><a class="" href="#">人才招聘</a></li>
                         </ul>
                     </div>
                     
@@ -167,7 +161,11 @@
                 </div>
 
                 <div class="m-mb">
-                    <div></div>
+                    <div class="m-picture"></div>
+                    <div class="m-article">
+                        <h2>公司简介</h2>
+                        <p>sadasd</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -180,5 +178,9 @@
         </div>
     </div>
 <script src="javascript/header.js"></script>
+<script src="javascript/tabs.js"></script>
+<script>
+
+</script>
 </body>
 </html>
