--- a/productM.html
+++ b/productM.html
@@ -144,16 +144,15 @@
                 <div class="m-sidemenu">
                     <div class="sidebox blue">
                         <ul>
-                            <li class="toplv"><a class="crt" href="#">关于我们</a></li>
-                            <li class="toplv toplv-x">
-                                <a class="cd" href="javascript:;">日化行业</a>
-                                <div class="sublv">
-                                    <a href="#">解决方案1</a>
-                                    <a href="#">解决方案1</a>
-                                    <a href="#">解决方案1</a>
-                                    <a href="#">解决方案1</a>
-                                </div>
-                            </li>
+                            <li class="toplv"><a class="crt" href="#">金蝶EAS</a></li>
+                            <li class="toplv"><a class="" href="#">金蝶/3Cloud</a></li>
+                            <li class="toplv"><a class="" href="#">金蝶/3WISE</a></li>
+                            <li class="toplv"><a class="" href="#">金蝶KIS</a></li>
+                            <li class="toplv"><a class="" href="#">金蝶s-HR</a></li>
+                            <li class="toplv"><a class="" href="#">金蝶BI</a></li>
+                            <li class="toplv"><a class="" href="#">金蝶协同</a></li>
+                            <li class="toplv"><a class="" href="#">金蝶移动应用</a></li>
+                            <li class="toplv"><a class="" href="#">金蝶BOS</a></li>
                         </ul>
                     </div>
                     
@@ -167,7 +166,43 @@
                 </div>
 
                 <div class="m-mb">
-                    <div></div>
+                    <div class="m-prointro clearfix">
+                        <div class="pic"><img src="" /></div>
+                        <div class="title">
+                            <h2>金蝶EAS</h2>
+                            <h4>集团企业卓越管理平台</h4>
+                            <p>sdfsfsfsfafsadfasdf</p>
+                        </div>
+                    </div>
+
+                    <div id="J_GoTab" class="m-tabops">
+                        <div class="tabs clearfix">
+                            <ul>
+                                <li class="j-tab crt" tab="t1">产品简介&定位</li>
+                                <li class="j-tab" tab="t2">产品特性</li>
+                                <li class="j-tab" tab="t3">领域应用</li>
+                                <li class="j-tab" tab="t4">客户案例</li>
+                                <li class="j-tab" tab="t5">产品架构</li>
+                            </ul>
+                        </div>
+                        <div class="contents">
+                            <div id="t1" class="tab-item" >
+                                1
+                            </div>
+                            <div id="t2" class="tab-item" style="display:none;">
+                                2
+                            </div>
+                            <div id="t3" class="tab-item" style="display:none;">
+                                3
+                            </div>
+                            <div id="t4" class="tab-item" style="display:none;">
+                                4
+                            </div>
+                            <div id="t5" class="tab-item" style="display:none;">
+                                5
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -180,5 +215,13 @@
         </div>
     </div>
 <script src="javascript/header.js"></script>
+<script src="javascript/tabs.js"></script>
+<script>
+(function() {
+    $('#J_GoTab').goTabs({
+        'switchOps' : 'hover'
+    });
+})();
+</script>
 </body>
 </html>
