--- a/about-2.html
+++ b/about-2.html
@@ -145,7 +145,7 @@
                 <div class="m-sidemenu">
                     <div class="sidebox blue">
                         <ul>
-                            <li class="toplv"><a class="" href="#">公司简介</a></li>
+                            <li class="toplv"><a class="" href="about-1.html">公司简介</a></li>
                             <li class="toplv"><a class="" href="#">公司文化</a></li>
                             <li class="toplv"><a class="crt" href="#">联系蝶舞</a></li>
                             <li class="toplv"><a class="" href="#">人才招聘</a></li>
