--- a/category-rh.html
+++ b/category-rh.html
@@ -145,15 +145,28 @@
                 <div class="m-sidemenu">
                     <div class="sidebox blue">
                         <ul>
-                            <li class="toplv"><a class="crt" href="#">金蝶EAS</a></li>
-                            <li class="toplv"><a class="" href="#">金蝶/3Cloud</a></li>
-                            <li class="toplv"><a class="" href="#">金蝶/3WISE</a></li>
-                            <li class="toplv"><a class="" href="#">金蝶KIS</a></li>
-                            <li class="toplv"><a class="" href="#">金蝶s-HR</a></li>
-                            <li class="toplv"><a class="" href="#">金蝶BI</a></li>
-                            <li class="toplv"><a class="" href="#">金蝶协同</a></li>
-                            <li class="toplv"><a class="" href="#">金蝶移动应用</a></li>
-                            <li class="toplv"><a class="" href="#">金蝶BOS</a></li>
+                            <li class="toplv toplv-x">
+                                <a class="cd" href="javascript:;">按行业分类</a>
+                                <div class="sublv">
+                                    <a href="#">日化</a>
+                                    <a href="#">电子</a>
+                                    <a href="#">医药</a>
+                                    <a href="#">食品</a>
+                                    <a href="#">机械</a>
+                                    <a href="#">电子商务</a>
+                                </div>
+                            </li>
+                            <li class="toplv toplv-x">
+                                <a class="cd" href="javascript:;">按管理领域</a>
+                                <div class="sublv">
+                                    <a href="#">财务管理</a>
+                                    <a href="#">协同管理</a>
+                                    <a href="#">供应链管理</a>
+                                    <a href="#">产品生命周期管理</a>
+                                    <a href="#">生产制造</a>
+                                    <a href="#">商业分析(BI)</a>
+                                </div>
+                            </li>
                         </ul>
                     </div>
                     
@@ -167,13 +180,9 @@
                 </div>
 
                 <div class="m-mb">
-                    <div class="m-prointro clearfix">
-                        <div class="pic"><img src="" /></div>
-                        <div class="title">
-                            <h2>金蝶EAS</h2>
-                            <h4>集团企业卓越管理平台</h4>
-                            <p>sdfsfsfsfafsadfasdf</p>
-                        </div>
+                    <div class="m-catslogo">
+                        <h4>日化</h4>
+                        <div class="icon icon-rh"></div>
                     </div>
 
                     <div id="J_GoTab" class="m-tabops">
