--- a/industry.html
+++ b/industry.html
@@ -145,15 +145,28 @@
                 <div class="m-sidemenu">
                     <div class="sidebox blue">
                         <ul>
-                            <li class="toplv"><a class="crt" href="#">金蝶EAS</a></li>
-                            <li class="toplv"><a class="" href="#">金蝶/3Cloud</a></li>
-                            <li class="toplv"><a class="" href="#">金蝶/3WISE</a></li>
-                            <li class="toplv"><a class="" href="#">金蝶KIS</a></li>
-                            <li class="toplv"><a class="" href="#">金蝶s-HR</a></li>
-                            <li class="toplv"><a class="" href="#">金蝶BI</a></li>
-                            <li class="toplv"><a class="" href="#">金蝶协同</a></li>
-                            <li class="toplv"><a class="" href="#">金蝶移动应用</a></li>
-                            <li class="toplv"><a class="" href="#">金蝶BOS</a></li>
+                            <li class="toplv toplv-x">
+                                <a class="cd" href="javascript:;">按行业分类</a>
+                                <div class="sublv">
+                                    <a href="#">日化</a>
+                                    <a href="#">电子</a>
+                                    <a href="#">医药</a>
+                                    <a href="#">食品</a>
+                                    <a href="#">机械</a>
+                                    <a href="#">电子商务</a>
+                                </div>
+                            </li>
+                            <li class="toplv toplv-x">
+                                <a class="cd" href="javascript:;">按管理领域</a>
+                                <div class="sublv">
+                                    <a href="#">财务管理</a>
+                                    <a href="#">协同管理</a>
+                                    <a href="#">供应链管理</a>
+                                    <a href="#">产品生命周期管理</a>
+                                    <a href="#">生产制造</a>
+                                    <a href="#">商业分析(BI)</a>
+                                </div>
+                            </li>
                         </ul>
                     </div>
                     
@@ -167,41 +180,31 @@
                 </div>
 
                 <div class="m-mb">
-                    <div class="m-prointro clearfix">
-                        <div class="pic"><img src="" /></div>
-                        <div class="title">
-                            <h2>金蝶EAS</h2>
-                            <h4>集团企业卓越管理平台</h4>
-                            <p>sdfsfsfsfafsadfasdf</p>
+                    <div class="m-cats">
+                        <h2>按行业分类</h2>
+                        <div>
+                            <ul class="clearfix">
+                                <li class="rh"><a href="#"><span>日化</span></a></li>
+                                <li class="dz"><a href="#"><span>电子</span></a></li>
+                                <li class="yy"><a href="#"><span>医药</span></a></li>
+                                <li class="sp"><a href="#"><span>食品</span></a></li>
+                                <li class="jx"><a href="#"><span>机械</span></a></li>
+                                <li class="sw"><a href="#"><span>电子商务</span></a></li>
+                            </ul>
                         </div>
                     </div>
 
-                    <div id="J_GoTab" class="m-tabops">
-                        <div class="tabs clearfix">
-                            <ul>
-                                <li class="j-tab crt" tab="t1">产品简介&定位</li>
-                                <li class="j-tab" tab="t2">产品特性</li>
-                                <li class="j-tab" tab="t3">领域应用</li>
-                                <li class="j-tab" tab="t4">客户案例</li>
-                                <li class="j-tab" tab="t5">产品架构</li>
+                    <div class="m-cats">
+                        <h2>按管理领域</h2>
+                        <div>
+                            <ul class="clearfix">
+                                <li class="cw"><a href="#"><span>财务管理</span></a></li>
+                                <li class="xt"><a href="#"><span>协同管理</span></a></li>
+                                <li class="gy"><a href="#"><span>供应链管理</span></a></li>
+                                <li class="cp"><a href="#"><span>产品生命周期管理</span></a></li>
+                                <li class="sc"><a href="#"><span>生产制造</span></a></li>
+                                <li class="bi"><a href="#"><span>商业分析(BI)</span></a></li>
                             </ul>
-                        </div>
-                        <div class="contents">
-                            <div id="t1" class="tab-item" >
-                                1
-                            </div>
-                            <div id="t2" class="tab-item" style="display:none;">
-                                2
-                            </div>
-                            <div id="t3" class="tab-item" style="display:none;">
-                                3
-                            </div>
-                            <div id="t4" class="tab-item" style="display:none;">
-                                4
-                            </div>
-                            <div id="t5" class="tab-item" style="display:none;">
-                                5
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -216,13 +219,5 @@
         </div>
     </div>
 <script src="javascript/header.js"></script>
-<script src="javascript/tabs.js"></script>
-<script>
-(function() {
-    $('#J_GoTab').goTabs({
-        'switchOps' : 'hover'
-    });
-})();
-</script>
 </body>
 </html>
