--- a/product.html
+++ b/product.html
@@ -167,42 +167,76 @@
                 </div>
 
                 <div class="m-mb">
-                    <div class="m-prointro clearfix">
-                        <div class="pic"><img src="" /></div>
-                        <div class="title">
-                            <h2>金蝶EAS</h2>
-                            <h4>集团企业卓越管理平台</h4>
-                            <p>sdfsfsfsfafsadfasdf</p>
-                        </div>
+                    <div class="m-prolist">
+                        <ul class="color clearfix">
+                            <li>
+                                <div class="title title-eas"></div>
+                                <div class="para">
+                                    <h3>面向大型企业</h3>
+                                    <p>适用于资本管控型、战略管控型及运营管控型的集团企业。</p>
+                                    <a class="btn" href="#"></a>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="title title-cloud"></div>
+                                <div class="para">
+                                    <h3>面向大型企业</h3>
+                                    <p>适用于资本管控型、战略管控型及运营管控型的集团企业。</p>
+                                    <a class="btn" href="#"></a>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="title title-wise"></div>
+                                <div class="para">
+                                    <h3>面向大型企业</h3>
+                                    <p>适用于资本管控型、战略管控型及运营管控型的集团企业。</p>
+                                    <a class="btn" href="#"></a>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="title title-kis"></div>
+                                <div class="para">
+                                    <h3>面向大型企业</h3>
+                                    <p>适用于资本管控型、战略管控型及运营管控型的集团企业。</p>
+                                    <a class="btn" href="#"></a>
+                                </div>
+                            </li>
+                        </ul>
                     </div>
 
-                    <div id="J_GoTab" class="m-tabops">
-                        <div class="tabs clearfix">
-                            <ul>
-                                <li class="j-tab crt" tab="t1">产品简介&定位</li>
-                                <li class="j-tab" tab="t2">产品特性</li>
-                                <li class="j-tab" tab="t3">领域应用</li>
-                                <li class="j-tab" tab="t4">客户案例</li>
-                                <li class="j-tab" tab="t5">产品架构</li>
-                            </ul>
-                        </div>
-                        <div class="contents">
-                            <div id="t1" class="tab-item" >
-                                1
-                            </div>
-                            <div id="t2" class="tab-item" style="display:none;">
-                                2
-                            </div>
-                            <div id="t3" class="tab-item" style="display:none;">
-                                3
-                            </div>
-                            <div id="t4" class="tab-item" style="display:none;">
-                                4
-                            </div>
-                            <div id="t5" class="tab-item" style="display:none;">
-                                5
-                            </div>
-                        </div>
+                    <div class="m-prolist">
+                        <ul class="grey clearfix">
+                            <li>
+                                <div class="title"><a href="#">金蝶 s-HR</a></div>
+                                <div class="para">
+                                    <p>帮助企业实现整合人力资源服务，为业务战略提供支持。</p>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="title"><a href="#">金蝶 s-HR</a></div>
+                                <div class="para">
+                                    <p>帮助企业实现整合人力资源服务，为业务战略提供支持。</p>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="title"><a href="#">金蝶 s-HR</a></div>
+                                <div class="para">
+                                    <p>帮助企业实现整合人力资源服务，为业务战略提供支持。</p>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="title"><a href="#">金蝶 s-HR</a></div>
+                                <div class="para">
+                                    <p>帮助企业实现整合人力资源服务，为业务战略提供支持。</p>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="title"><a href="#">金蝶 s-HR</a></div>
+                                <div class="para">
+                                    <p>帮助企业实现整合人力资源服务，为业务战略提供支持。</p>
+                                </div>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -217,12 +251,5 @@
     </div>
 <script src="javascript/header.js"></script>
 <script src="javascript/tabs.js"></script>
-<script>
-(function() {
-    $('#J_GoTab').goTabs({
-        'switchOps' : 'hover'
-    });
-})();
-</script>
 </body>
 </html>
