最新首页完成

--- a/second.html
+++ b/second.html
@@ -172,11 +172,10 @@
             </div>
         </div>
         
-    </div>
-
-    <div class="footer">
-        <div class="container">
-            <p>蝶舞软件服务有限公司 &copy;2013 13007757号-1</p>
+        <div class="footer">
+            <div class="inner">
+                <p>蝶舞软件服务有限公司 &copy;2013 13007757号-1</p>
+            </div>
         </div>
     </div>
 <script src="javascript/header.js"></script>
