解决方案页面添加

--- a/section/side-product.html
+++ b/section/side-product.html
@@ -1,8 +1,8 @@
 <div class="sidebox blue">
     <ul>
         <li class="toplv"><a class="" href="product-eas.php">金蝶EAS</a></li>
-        <li class="toplv"><a class="" href="product-cloud.php">金蝶/3Cloud</a></li>
-        <li class="toplv"><a class="" href="product-wise.php">金蝶/3WISE</a></li>
+        <li class="toplv"><a class="" href="product-cloud.php">金蝶K/3Cloud</a></li>
+        <li class="toplv"><a class="" href="product-wise.php">金蝶K/3WISE</a></li>
         <li class="toplv"><a class="" href="product-kis.php">金蝶KIS</a></li>
         <li class="toplv"><a class="" href="#">金蝶s-HR</a></li>
         <li class="toplv"><a class="" href="#">金蝶BI</a></li>
