--- a/section/header.html
+++ b/section/header.html
@@ -14,7 +14,7 @@
 
 <div class="header">
     <div class="container clearfix">
-        <div class="site-logo"><img src="http://www.deefly.cn/usr/themes/fly/images/logo.png" alt="" width="90" height="60"/></div>
+        <div class="site-logo"><img src="http://www.deefly.cn/images/logo.png" alt="" width="90" height="60"/></div>
         <ul class="site-menu">
             <li class="menu-item">
                 <a class="item-trigger" href="index.php">首页</a>
