--- a/section/side-category.html
+++ b/section/side-category.html
@@ -3,23 +3,23 @@
         <li class="toplv toplv-x">
             <a class="cd" href="javascript:;">按行业分类</a>
             <div class="sublv">
-                <a href="#">日化</a>
-                <a href="#">电子</a>
-                <a href="#">医药</a>
-                <a href="#">食品</a>
-                <a href="#">机械</a>
-                <a href="#">电子商务</a>
+                <a href="category-rh.php">日化</a>
+                <a href="category-dz.php">电子</a>
+                <a href="category-yy.php">医药</a>
+                <a href="category-sp.php">食品</a>
+                <a href="category-jx.php">机械</a>
+                <a href="category-ls.php">零售</a>
             </div>
         </li>
         <li class="toplv toplv-x">
             <a class="cd" href="javascript:;">按管理领域</a>
             <div class="sublv">
-                <a href="#">财务管理</a>
-                <a href="#">协同管理</a>
-                <a href="#">供应链管理</a>
-                <a href="#">产品生命周期管理</a>
-                <a href="#">生产制造</a>
-                <a href="#">商业分析(BI)</a>
+                <a href="category-cw.php">财务管理</a>
+                <a href="category-xt.php">协同管理</a>
+                <a href="category-gy.php">供应链管理</a>
+                <a href="category-sm.php">产品生命周期管理</a>
+                <a href="category-sc.php">生产制造</a>
+                <a href="category-bi.php">商业分析(BI)</a>
             </div>
         </li>
     </ul>
