--- a/section/footer.html
+++ b/section/footer.html
@@ -1,6 +1,6 @@
 <div id="J_Footer" class="footer">
     <div class="bg"></div>
     <div class="inner">
-        <p>蝶舞软件服务有限公司 &copy;2013 13007757号-1</p>
+        <p>杭州蝶舞软件有限公司 &copy;2013 13007757号-1</p>
     </div>
 </div>
