--- a/section/header.html
+++ b/section/header.html
@@ -46,25 +46,25 @@
                 <div class="sub sub-fa clearfix sdw" style="display:none;">
                     <span class="arrow"></span>
                     <div class="column">
-                        <h3><a href="http://www.kingdee.com/solutions/index_industry.jsp">按行业分类</a></h3>
+                        <h3><a href="javascript:;">按行业分类</a></h3>
                         <ul class="two two-1 clearfix">
-                            <li><a href="">日化</a></li>
-                            <li><a href="">电子</a></li>
-                            <li><a href="">医药</a></li>
-                            <li><a href="">食品</a></li>
-                            <li><a href="">机械</a></li>
-                            <li><a href="">电子商务</a></li>
+                            <li><a href="category-rh.php">日化</a></li>
+                            <li><a href="category-dz.php">电子</a></li>
+                            <li><a href="category-yy.php">医药</a></li>
+                            <li><a href="category-sp.php">食品</a></li>
+                            <li><a href="category-jx.php">机械</a></li>
+                            <li><a href="category-ls.php">零售</a></li>
                         </ul>
                     </div>
                     <div class="column column-1 column-2">
-                        <h3><a href="">按管理领域</a></h3>
+                        <h3><a href="javascript:;">按管理领域</a></h3>
                         <ul class="two two-2 clearfix">
-                            <li><a href="">财务管理</a></li>
-                            <li><a href="">协同管理</a></li>
-                            <li><a href="">供应链管理</a></li>
-                            <li><a href="">产品生命周期管理</a></li>
-                            <li><a href="">生产制造</a></li>
-                            <li><a href="">商业分析(BI)</a></li>
+                            <li><a href="category-cw.php">财务管理</a></li>
+                            <li><a href="category-xt.php">协同管理</a></li>
+                            <li><a href="category-gy.php">供应链管理</a></li>
+                            <li><a href="category-sm.php">产品生命周期管理</a></li>
+                            <li><a href="category-sc.php">生产制造</a></li>
+                            <li><a href="category-bi.php">商业分析(BI)</a></li>
                         </ul>
                     </div>
                 </div>
