--- a/section/footer.html
+++ b/section/footer.html
@@ -2,5 +2,23 @@
     <div class="bg"></div>
     <div class="inner">
         <p>杭州蝶舞软件有限公司 &copy;2013 13007757号-1</p>
+        <ul class="m-sns clearfix">
+        	<li class="icon icon-xl">
+        		<a href="#"></a>
+        	</li>
+        	<li class="icon icon-tx">
+        		<a href="#"></a>
+        	</li>
+        	<li id="J_WX" class="icon icon-wx">
+        		<a href="javascript:;"></a>
+        	</li>
+        	<li class="icon icon-yzj">
+        		<a href="#"></a>
+        	</li>
+        </ul>
+        <div id="J_MA" class="wx" style="display:none;">
+            <img width="200" height="200" src="images/wx.jpg">
+            <span id="J_WXX" class="close"></span>
+        </div>
     </div>
 </div>
