--- a/section/header.html
+++ b/section/header.html
@@ -3,11 +3,7 @@
         <ul class="nav">
             <li class="icon nav-phone">0571-87758515</li>
             <li class="icon email">hzdwrj@deefly.cn</li>
-            <li id="J_WX" class="weixin">关注官方微信</li>
-            <div class="wx" style="display:none;">
-                <img width="114" height="114" src="http://www.deefly.cn/usr/themes/fly/images/wx.jpg">
-                <span id="J_WXX" class="close"></span>
-            </div>
+            
         </ul>
     </div>
 </div>
@@ -50,10 +46,12 @@
                         <ul class="two two-1 clearfix">
                             <li><a href="category-rh.php">日化</a></li>
                             <li><a href="category-dz.php">电子</a></li>
+                            <li><a href="category-qp.php">汽配</a></li>
                             <li><a href="category-yy.php">医药</a></li>
                             <li><a href="category-sp.php">食品</a></li>
                             <li><a href="category-jx.php">机械</a></li>
                             <li><a href="category-ls.php">零售</a></li>
+                            <li><a href="category-fz.php">服装</a></li>
                         </ul>
                     </div>
                     <div class="column column-1 column-2">
@@ -64,7 +62,9 @@
                             <li><a href="category-gy.php">供应链管理</a></li>
                             <li><a href="category-sm.php">产品生命周期管理</a></li>
                             <li><a href="category-sc.php">生产制造</a></li>
+                            <li><a href="category-hr.php">人力资源管理</a></li>
                             <li><a href="category-bi.php">商业分析(BI)</a></li>
+                            <li><a href="category-bi.php">金蝶移动应用</a></li>
                         </ul>
                     </div>
                 </div>
@@ -72,8 +72,8 @@
                     <span class="arrow"></span>
                     <ul>
                         <li><a href="product-eas.php">金蝶EAS</a></li>
-                        <li><a href="product-cloud.php">金蝶/3Cloud</a></li>
-                        <li><a href="product-wise.php">金蝶/3WISE</a></li>
+                        <li><a href="product-cloud.php">金蝶K/3Cloud</a></li>
+                        <li><a href="product-wise.php">金蝶K/3WISE</a></li>
                         <li><a href="product-kis.php">金蝶KIS旗舰版</a></li>
                     </ul>
                 </div>
@@ -82,20 +82,12 @@
                     <div class="column">
                         <h3><a href="">实施服务</a></h3>
                         <ul>
-                            <li><a href="">实施服务产品</a></li>
-                            <li><a href="">实施方法</a></li>
-                        </ul>
-                    </div>
-                    <div class="column column-3">
-                        <h3><a href="">运维与支持</a></h3>
-                        <ul>
-                            <li><a href="">服务体系</a></li>
-                            <li><a href="">服务方案</a></li>
-                            <li><a href="">服务流程</a></li>
+                            <li><a href="service-cp.php">服务产品方法</a></li>
+                            <li><a href="service-yw.php">运维与支持</a></li>
                         </ul>
                     </div>
                     <div class="column column-1 column-2">
-                        <h3><a href="">实施团队</a></h3>
+                        <h3><a href="javascript:;">实施团队</a></h3>
                         <ul>
                             <li><a href="">团队介绍</a></li>
                             <li><a href="">个人介绍</a></li>
