--- a/section/side-category.html
+++ b/section/side-category.html
@@ -3,11 +3,13 @@
         <li class="toplv toplv-x">
             <a class="cd" href="javascript:;">按行业分类</a>
             <div class="sublv">
-                <a href="category-rh.php">日化</a>
-                <a href="category-dz.php">电子</a>
-                <a href="category-yy.php">医药</a>
-                <a href="category-sp.php">食品</a>
                 <a href="category-jx.php">机械</a>
+                <a href="category-dz.php">电子</a>
+                <a href="category-qp.php">汽配</a>
+                <a href="category-yy.php">医药</a>
+                <a href="category-rh.php">日化</a>
+                <a href="category-sp.php">食品</a>
+                <a href="category-fz.php">服装</a>
                 <a href="category-ls.php">零售</a>
             </div>
         </li>
@@ -15,11 +17,13 @@
             <a class="cd" href="javascript:;">按管理领域</a>
             <div class="sublv">
                 <a href="category-cw.php">财务管理</a>
-                <a href="category-xt.php">协同管理</a>
                 <a href="category-gy.php">供应链管理</a>
-                <a href="category-sm.php">产品生命周期管理</a>
                 <a href="category-sc.php">生产制造</a>
+                <a href="category-hr.php">人力资源管理</a>
+                <a href="category-sm.php">产品生命周期管理</a>
+                <a href="category-xt.php">协同管理</a>
                 <a href="category-bi.php">商业分析(BI)</a>
+                <a href="category-bi.php">金蝶移动应用</a>
             </div>
         </li>
     </ul>
